# Clipboard_2_TTS

./: .cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  Package.wxs  README.md
docs/: clipboard_tts_monitor_fase0.html  modificaciones.md
include/: pch.h
installer/: Components.wxs  Directories.wxs  Package.wxs
res/: app.manifest  resources.rc
src/audio/: AACEncoder.cpp  AACEncoder.h  AudioLogger.cpp  AudioLogger.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: ClipboardListener.cpp  ClipboardListener.h  HotkeyManager.cpp  HotkeyManager.h  StateMachine.cpp  StateMachine.h
src/main/: Application.cpp  Application.h  main.cpp
src/tts/: TTSEngine.cpp  TTSEngine.h  VoiceEnumerator.cpp  VoiceEnumerator.h
src/ui/: ContextMenu.cpp  ContextMenu.h  TrayIcon.cpp  TrayIcon.h
src/utils/: RaiiWrappers.h  StringUtils.cpp  StringUtils.h
